--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "browser-router": "^0.2.0",
     "dotenv": "^6.1.0",
     "google-map-react": "^1.1.1",
+    "jquery": "^3.3.1",
+    "material-design-icons": "^3.0.1",
+    "popper.js": "^1.14.5",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "tooltip.js": "^1.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
