--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "jquery": "^3.3.1",
     "material-design-icons": "^3.0.1",
     "popper.js": "^1.14.5",
+    "prop-types": "^15.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
