--- a/package.json
+++ b/package.json
@@ -3,19 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.4.1",
     "browser-router": "^0.2.0",
-    "dotenv": "^6.1.0",
-    "google-map-react": "^1.1.1",
-    "jquery": "^3.3.1",
+    "dotenv": "^6.2.0",
+    "google-map-react": "^1.1.5",
+    "jquery": "^3.4.1",
     "material-design-icons": "^3.0.1",
-    "popper.js": "^1.14.5",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "node-sass": "^4.13.1",
+    "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
-    "tooltip.js": "^1.3.1"
+    "react-scripts": "^3.3.1",
+    "reactstrap": "^8.4.1",
+    "tooltip.js": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
